# golars

./: .goreleaser.yaml  README.md  SKILLS.md  go.mod  go.sum  golars.go  install-zed-extension.sh  install.sh
.github/workflows/: release.yml
cmd/golars/: cli.go  cmd_with.go  cmds_horizontal.go  cmds_more.go  cmds_wave10.go  color.go  frames.go  main.go  output.go  output_markdown_test.go  preview.go  subcmd_inspect.go  subcmd_kernel_host.go  subcmd_run.go  subcmd_tools.go  subcmd_transpile.go
cmd/golars-kernel/: connection.go  handlers.go  host.go  install.go  kernel.go  main.go  protocol.go  protocol_test.go
cmd/golars-lsp/: cols.go  features.go  server_test.go
docs/: jupyter.md  scripting.md
docs-site/: README.md
docs-site/content/docs/: scripting.mdx
editors/jupyterlab-golars/: .gitignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
editors/jupyterlab-golars/jupyterlab_golars/: __init__.py
editors/jupyterlab-golars/src/: index.ts
editors/jupyterlab-golars/style/: index.css
editors/nvim-golars/: README.md
editors/nvim-golars/syntax/: glr.vim
editors/tree-sitter-golars/: .gitignore  grammar.js
editors/tree-sitter-golars/src/: grammar.json  node-types.json  parser.c
editors/zed-golars/: .gitignore  Cargo.toml  README.md  build-package.sh  extension.toml
editors/zed-golars/languages/golars/: brackets.scm
examples/: README.md
examples/script/: agg.glr  branching.glr  demo.glr  derived.glr  join.glr  multisource.glr  nulls.glr  pipeline.glr  regex.glr  rolling.glr
examples/script/data/: orders.csv
examples/script/transpiled/: README.md
examples/script/transpiled/agg/: main.go
examples/script/transpiled/branching/: main.go
examples/script/transpiled/demo/: main.go
examples/script/transpiled/derived/: main.go
examples/script/transpiled/join/: main.go
examples/script/transpiled/multisource/: main.go
expr/: expr.go  str.go
jupyter/render/: render.go  render_test.go
lazy/: frame.go
script/: spec.go
script/exprparse/: exprparse.go
script/predparse/: predparse.go  predparse_test.go
script/transpile/: render.go  transpile.go  transpile_test.go
(+4 files in other folders)
